flapivor/tests/m1/hopix/parser/bad/71-local-definition-4.hopix
val main =
    def ping () = pong ()
    def pong () = ping ();
    ping ()